Changelog
=========

1.0.4 (unreleased)
------------------

- Reverted dash-less UUID generation, restoring RFC 4122 canonical
  string representation with dashes.  This should only affect newly
  created objects, thus preserving backward-compatibility for
  existing content for which a UUID was generated using plone.uuid
  1.0.2 and 1.0.3.  The motive for this change is preservation of
  interoperability when UUIDs are used in multiple software systems.
  UUID strings with dashes are also easier to detect using regular
  expressions. 
  [seanupton]


1.0.3 (2012-05-31)
------------------

- Use zope.browserpage.
  [hannosch]

- Defensive UUID assignment in addAttributeUUID() handler: keep existing
  UUID value if handler called more than once, except in case of object
  copy event, where original and destination should have distinct UUID.
  [seanupton]

1.0.2 - 2011-10-18
------------------

- Generate UUID without dashes.
  [elro]

1.0.1 - 2011-05-20
------------------

- Relicense under modified BSD license.
  See http://plone.org/foundation/materials/foundation-resolutions/plone-framework-components-relicensing-policy
  [davisagli]

1.0 - 2011-05-13
----------------

- Release 1.0 Final
  [esteele]
  
- Add MANIFEST.in.
  [WouterVH]


1.0b2 - 2011-01-03
------------------

- Add MutableUUID component
  [toutpt]


1.0b1 - 2010-11-27
------------------

- Initial release