@@ -1,3 +1,5 @@
+import uuid
+
 from zope import interface
 from zope import component
 
@@ -23,3 +25,23 @@ class MutableAttributeUUID(object):
     def set(self, uuid):
         uuid = str(uuid)
         setattr(self.context, interfaces.ATTRIBUTE_NAME, uuid)
+
+
+@interface.implementer(interfaces.IUUIDObject)
+@component.adapter(interfaces.IUUID)
+def uuid_object(context):
+    uid_str = interfaces.IUUID(context, None)
+    if uid_str is None:
+        return None
+    return uuid.UUID(uid_str)
+
+
+@interface.implementer(interfaces.IUUID)
+@component.adapter(interfaces.IUUIDObject)
+def uuid_serialized(context):
+    return str(context)
+
+
+# classImplements here to avoid complex package dependencies
+# necessary for <class...> in ZCML.
+interface.classImplements(uuid.UUID, interfaces.IUUIDObject)
